Funcionalidade que permite captar todos os eventos cadastrados por um usuario especifico baseado em seu UUID
